--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>TodoApp</title>
   </head>
   <body>
-
+  <noscript>
+    You have to enable Javascript in order to run this app
+  </noscript>
   </body>
 </html>
