Improved index.html division for 3 dives

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title></title>
   </head>
   <body>
-
+    <div class="wrapper">
+      <div id="left_part"></div>
+      <div id="middle_part"></div>
+      <div id="right_part"></div>
+    </div>
   </body>
 </html>
