Improved index.html added button for search

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div id="left_part" style="flex-grow: 2">
         <div id="browse" style="width: 100%">
           <input type="text" id="input_for_searching" style="width: calc(100% - 50px)">
-          &#8981;
+          <button id="but_for_browse">&#8981;</button>
         </div>
         <div id="list_of_lists"></div>
       </div>
