--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <title>TodoApp</title>
   </head>
   <body>
-    <div class="wrapper" style="display: flex">
-      <div id="left_part" style="flex-grow: 2">
-        <div id="browse" style="width: 100%">
-          <input type="text" id="input_for_searching" style="width: calc(100% - 50px)">
+    <div class="wrapper">
+      <div id="left_part">
+        <span id="browse">
+          <span id="left part">
+            <img id = "your_photo">
+            <h3 class="list_name">MY_NAME</h3>
+          </span>
           <button id="but_for_browse">&#8981;</button>
+        </span>
+        <div id="list_of_lists">
+
         </div>
-        <div id="list_of_lists"></div>
       </div>
-      <div id="middle_part" style="flex-grow: 5">
+      <div id="middle_part">
         <p>a</p>
       </div>
-      <div id="right_part" style="flex-grow: 3">
+      <div id="right_part">
         <p>a</p>
       </div>
     </div>
