Changed index.html and style.css added display grid to left part

--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
   <body>
     <div class="wrapper">
       <div id="left_part">
-        <span id="browse">
-          <span id="left part">
-            <img id = "your_photo">
-            <h3 class="list_name">MY_NAME</h3>
-          </span>
-          <button id="but_for_browse">&#8981;</button>
-        </span>
-        <div id="list_of_lists">
+        <img id="your_photo" >
+        <h3>Your name</h3>
+        <h3>&#8981;</h3>
 
-        </div>
+        <h3 class="symbols">&#9788;</h3>
+        <h3 class="name_of_list">My day</h3>
+        <h3 class="num_of_tasks">7</h3>
+
+        <h3 class="symbols">&#8962;</h3>
+        <h3 class="name_of_list">To-do</h3>
+        <h3 class="num_of_tasks">4</h3>
+
+        <h3>&#43;</h3>
+        <h3>Add</h3>
       </div>
       <div id="middle_part">
         <p>a</p>
