--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
     <title>TodoApp</title>
   </head>
   <body>
@@ -10,17 +11,17 @@
       <div id="left_part">
         <img id="your_photo" >
         <h3>Your name</h3>
-        <h3>&#8981;</h3>
+        <i class="fas fa-search"></i>
 
-        <h3 class="symbols">&#9788;</h3>
+        <i class="fas fa-sun"></i>
         <h3 class="name_of_list">My day</h3>
         <h3 class="num_of_tasks">7</h3>
 
-        <h3 class="symbols">&#8962;</h3>
+        <i class="fas fa-home"></i>
         <h3 class="name_of_list">To-do</h3>
         <h3 class="num_of_tasks">4</h3>
 
-        <h3>&#43;</h3>
+        <i class="fas fa-plus"></i>
         <h3>Add</h3>
       </div>
       <div id="middle_part">
