Improved index.ht

--- a/index.html
+++ b/index.html
@@ -21,11 +21,37 @@
         <h3 class="name_of_list">To-do</h3>
         <h3 class="num_of_tasks">4</h3>
 
+        <i class="fas fa-list-ul"></i>
+        <h3 class="name_of_list">Animals</h3>
+        <h3 class="num_of_tasks">3</h3>
+
         <i class="fas fa-plus"></i>
-        <h3>Add</h3>
+        <h3>New list</h3>
       </div>
       <div id="middle_part">
-        <p>a</p>
+        <div id="title">
+          <h1>My day</h1>
+          <h4>Wednesday 29 March</h4>
+        </div>
+        <div id="list_of_tasks">
+          <input type="checkbox">
+          <span class = "single_task">
+            <h3 class = "task_name">Feed the dog</h3>
+            <p class = "description">Animals</p>
+          </span>
+          <input type="checkbox">
+          <span class = "single_task">
+            <h3 class = "task_name">Make To-do app</h3>
+            <p class = "description">To-do</p>
+          </span>
+          <input type="checkbox">
+          <span class = "single_task">
+            <h3 class = "task_name">Check the weather</h3>
+            <p class = "description">My day</p>
+          </span>
+          <i class="fas fa-plus-circle"></i>
+          <h3>Add a to-do</h3>
+        </div>
       </div>
       <div id="right_part">
         <p>a</p>
