--- a/index.html
+++ b/index.html
@@ -78,5 +78,7 @@
   <noscript>
     You have to enable Javascript in order to run this app
   </noscript>
+  <script src="scripts/main.js" charset="utf-8"></script>
+  <script src="scripts/schema.js" charset="utf-8"></script>
   </body>
 </html>
