--- a/index.html
+++ b/index.html
@@ -79,20 +79,28 @@
           <input type="checkbox">
           <h1>List redesign goals</h1>
         </div>
-        <div class="information">
-          <i class="fas fa-sun"></i>
-          <h3>Added to my day</h3>
-        </div>
-        <div class="information">
-          <i class="far fa-clock"></i>
-          <span>
-            <h3>Remind me at 9:25 AM</h3>
-            <p>Today</p>
+        <div class="options">
+          <span class="information">
+            <i class="fas fa-sun"></i>
+            <h3>Added to my day</h3>
           </span>
-          <i class="far fa-calendar-alt"></i>
-          <h3>Due yesterday</h3>
-          <i class="fas fa-redo"></i>
-          <h3>Repeat</h3>
+        </div>
+        <div class="options">
+          <span class="information">
+            <i class="far fa-clock"></i>
+            <span>
+              <h3>Remind me at 9:25 AM</h3>
+              <p>Today</p>
+            </span>
+          </span>
+          <span class="information">
+            <i class="far fa-calendar-alt"></i>
+            <h3>Due yesterday</h3>
+          </span>
+          <span class="information">
+            <i class="fas fa-redo"></i>
+            <h3>Repeat</h3>
+          </span>
         </div>
       </div>
     </div>
